<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title">Title</string>
    <string name="release_date">December 12, 2018</string>
    <string name="desc_poster_detail">This is a poster image of the selected item</string>
    <string name="original_language">Original Language</string>
    <string name="language">Language</string>
    <string name="desc_ic_actor">This is an icon for actor items</string>
    <string name="overview">Overview</string>
    <string name="overview_value">This is a overview of the film</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="FORMAT_IN">yyyy-MM-dd</string>
    <string name="FORMAT_OUT">EEEE, dd MMM yyyy</string>
    <string name="vote_average">Vote Average</string>
    <string name="vote_average_value">7.8</string>
    <string name="vote_rating">Vote Rating</string>
    <string name="vote_count">Vote Count</string>
    <string name="vote_count_value">724.009</string>
    <string name="popularity">Popularity</string>
    <string name="loading">Loading...</string>
    <string name="rating_movie">Rating Movie</string>

    <string name="movie_show">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="released_date">Released Date</string>
    <string name="detail">Detail</string>
    <string name="change_language">Change Language</string>
    <string name="detail_tv_show">Detail Tv Show</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorite">Favorite</string>
    <string name="fav_movie">Movie</string>
    <string name="fav_tv_show">Tv Show</string>
    <string name="nothing_favorite_item">Nothing Favorite item</string>
    <string name="find_movie">Find Movie</string>
    <string name="appwidget_text_movie">Favorite Movie</string>
    <string name="message_reminders_daily">Hay, come back to Movie Catalogue. We Have new Movie now !</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="movie_release"> Movie Release</string>
    <string name="show_more">Show More...</string>
    <string name="release_reminder_desc">The reminder will provide notification of the movies release today</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="delete_reminder">Reminders Deleted</string>
    <string name="daily_reminder_desc">This daily reminder will bring you back to the application. Reminder will push notification every 07.00 A.M</string>
    <string name="upcoming_reminder_message">Release at: </string>
    <string name="release_today">Release movie today is: </string>
    <string name="settings">Settings</string>
    <string name="change">Change</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="find_tv_shows">Find Tv Shows</string>
    <string name="favorite_deleted">Favorite Deleted</string>
    <string name="exit_apps">Exit Application</string>
    <string name="message_exit">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_movie_here">Search Movie Here!</string>
    <string name="fail_find_movie">Failed to Find Movie</string>
    <string name="search_tv_here">Search Tv Show Here!</string>
    <string name="fail_find_tv">Failed to Find Tv Show</string>
    <string name="toast_reminder_set">Reminder Set!</string>
    <string name="toast_reminder_created">Reminder Created!</string>
    <string name="message_del_favorite">Delete This Favorite?</string>
    <string name="nothing_data">Nothing Favorite Item</string>
    <string name="default_notification_channel_id">Daily Reminders</string>
    <string name="icon_connection_error">Icon Connection error</string>
    <string name="no_connection_internet">No Connection Internet</string>
    <string name="upcoming_act">Upcoming Movie</string>
</resources>