<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpcomingActivity">

    <ImageView
        android:id="@+id/ivy_no_connection_upcoming"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end|center"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/icon_connection_error"
        android:src="@drawable/ic_error_connection"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/no_connection_upcoming"
        app:layout_constraintTop_toTopOf="@+id/rv_upcoming" />

    <ProgressBar
        android:id="@+id/progress_bar_upcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rv_upcoming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_upcoming" />

    <TextView
        android:id="@+id/tv_loading_upcoming"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/loading"
        android:textColor="#1976d2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/rv_upcoming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rv_upcoming"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar_upcoming" />

    <TextView
        android:id="@+id/no_connection_upcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:text="@string/no_connection_internet"
        android:textColor="#FF0E0B"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_upcoming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_upcoming" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_upcoming"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>